docs+tests: suppression guidance and TS wrapper coverage
- Document how to suppress @jax-js/* rules for deliberate exceptions (e.g., jit).
- Improve array-init detection by unwrapping transparent TS wrappers.
- Add TypeScript parser-backed tests for require-consume.

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     }
   },
   "devDependencies": {
+    "@typescript-eslint/parser": "^8.46.4",
     "eslint": "^9.31.0",
     "typescript": "~5.9.3",
     "vitest": "^4.0.9"
