chore: read version from package.json, fix releasing instructions
- src/index.ts now imports version from package.json via import attribute
  instead of duplicating the version string.
- tsconfig: enable resolveJsonModule.
- README releasing steps: only bump package.json, note auto-read.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2022",
     "module": "ESNext",
     "moduleResolution": "bundler",
+    "resolveJsonModule": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
