docs: add TypeScript prerequisites and ESLint v10 support
Fixes #1

- Installation: include jiti and @typescript-eslint/parser in the
  install command with a prerequisites table explaining each.
- Setup: show complete TypeScript-ready config with parser and files
  glob as the primary example. Add integration snippet for existing
  typescript-eslint setups.
- Individual rules and limiting-to-directories examples now include
  parser and files glob.
- package.json: widen eslint peer dep to >=9.0.0 || >=10.0.0.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test:watch": "vitest"
   },
   "peerDependencies": {
-    "eslint": ">=9.0.0",
+    "eslint": ">=9.0.0 || >=10.0.0",
     "@jax-js/jax": ">=0.1.0 <0.3.0"
   },
   "peerDependenciesMeta": {
